Bug 69450 - FORMATTING Format painter deletes cell content, paste special does not work
Summary: FORMATTING Format painter deletes cell content, paste special does not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.2.1 rc
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0 target:4.1.2 target:4.0.6
Keywords: regression
: 69709 69720 69841 69883 70061 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-09-17 07:00 UTC by Nikos
Modified: 2014-02-05 11:39 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
keep IDF_ATTRIB and IDF_CONTENTS bitmaps non-overlapping (1.06 KB, patch)
2013-09-25 06:01 UTC, Jouni Kosonen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikos 2013-09-17 07:00:28 UTC
The format painter does not work. Instead of applying the formating it deletes the cell contents.

Moreover, after copying with Ctrl. + C, Ctrl. +Shift +V is not available (and the menu item paste special is gray)

Have not checked on Linux yet, if the behavior is the same.

OT: The page https://www.libreoffice.org/download/pre-releases/ does not show links for this RC. Is this on purpose? It took me over two weeks to realize that there is an RC for 4.1.2 available.
Comment 1 Nikos 2013-09-17 07:27:25 UTC
I stand corrected. When paste special does work, and you select e.g. format, it pastes the formats,but overwrites the values, and the other way around. Paste special in 4.1.2RC1 is a mess.
Comment 2 m_a_riosv 2013-09-17 11:07:08 UTC
Hi Nikos, thanks for reporting.

Reproducible.
Win7x64Ultimate
Version: 4.1.3.0.0+ Build ID: 952c5fe20d5975c8a2c9f5093d05472ca0fc78f

Regression from 4.0.5.2

Data loss.

Added to MAB 4.1
Comment 3 Hans Immel 2013-09-19 13:21:12 UTC
Confirm this bug for 4.1.2.2 RC on my Windows 7 Prof 64bit SP 1
Comment 4 Jouni Kosonen 2013-09-24 09:42:48 UTC
Confirm this for 4.1.2.2 RC 64-bit source build on Gentoo Linux as well.
Regression from 4.1.1.2 release.
Comment 5 Jouni Kosonen 2013-09-24 22:03:35 UTC
This seems to be indirectly caused by commit http://cgit.freedesktop.org/libreoffice/core/commit/?id=4205ca8003bc5c62a10620c7e54bdf9afb9d86bf&h=libreoffice-4-1

(fix for fdo#39484)

Reverting that commit restores the Paste Special functionality to what it was in 4.1.1.2.

Apparently some pre-existing code in the paste side of the functionality gets confused by the new bit in nFlags but being unfamiliar with the codebase I've been unable to find it so far.
Comment 6 Mihkel Tõnnov 2013-09-24 22:26:17 UTC
I can confirm this on Debian x86 as well (4.1.2.2) -- setting platform to "All".
Comment 7 Jouni Kosonen 2013-09-24 23:28:34 UTC
(In reply to comment #5)

WAG: until now ( IDF_CONTENTS & IDF_ATTRIB ) == 0x0000

commit 4205ca8003bc5c62a10620c7e54bdf9afb9d86bf makes 
( IDF_CONTENTS & IDF_ATTRIB ) == 0x0800

This means that if a function gets IDF_CONTENTS as an argument it tests true for IDF_ATTRIB and vice versa.
Comment 8 Jouni Kosonen 2013-09-25 06:01:17 UTC
Created attachment 86499 [details]
keep IDF_ATTRIB and IDF_CONTENTS bitmaps non-overlapping

One line change to the additions introduced in 4205ca800 
Fixes fdo#69450 here and should leave fdo#39484 fixed.


 const sal_uInt16 IDF_SPECIAL_BOOLEAN = 0x1000;
-const sal_uInt16 IDF_ATTRIB     = IDF_HARDATTR | IDF_STYLES | IDF_OUTLINE;
+const sal_uInt16 IDF_ATTRIB     = IDF_HARDATTR | IDF_STYLES;
 const sal_uInt16 IDF_CONTENTS   = IDF_VALUE | IDF_DATETIME | IDF_STRING | IDF_NOTE | IDF_FORMULA | IDF_OUTLINE;
Comment 9 Markus Mohrhard 2013-09-27 14:28:09 UTC
Pushed with the wrong bug number. And Michael just fixed it completely by reverting some parts of it.
Comment 10 Commit Notification 2013-09-27 16:30:25 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ac14ac29a4d069b3e85032237efed2f899a10c7b

fdo#69450 - IDF_ATTRIB & IDF_CONTENTS must be disjoint.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-09-27 16:41:33 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=06428e8bf5378feb1390bc5867500219edbf139d&h=libreoffice-4-1

fdo#69450 - IDF_ATTRIB & IDF_CONTENTS must be disjoint.


It will be available in LibreOffice 4.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2013-09-27 16:52:18 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9f5228cfbf9c6dde54215f75faccacb28abf67c0&h=libreoffice-4-1-2

fdo#69450 - IDF_ATTRIB & IDF_CONTENTS must be disjoint.


It will be available already in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Mihkel Tõnnov 2013-09-27 17:02:26 UTC
(In reply to comment #12)
> Michael Meeks committed a patch related to this issue.
> It has been pushed to "libreoffice-4-1-2":
> ...
> It will be available already in LibreOffice 4.1.2.

I'm curious: how? https://wiki.documentfoundation.org/ReleasePlan/4.1#4.1.2_release doesn't have another RC scheduled for 4.1.2 -- or will there be one nonetheless?
Comment 14 Markus Mohrhard 2013-09-28 07:13:03 UTC
*** Bug 69883 has been marked as a duplicate of this bug. ***
Comment 15 Markus Mohrhard 2013-09-28 07:14:07 UTC
*** Bug 69709 has been marked as a duplicate of this bug. ***
Comment 16 Kevin Suo 2013-09-29 02:19:41 UTC
> I'm curious: how?
> https://wiki.documentfoundation.org/ReleasePlan/4.1#4.1.2_release doesn't
> have another RC scheduled for 4.1.2 -- or will there be one nonetheless?

I see this on the QA mailing list:
http://nabble.documentfoundation.org/Libreoffice-qa-ANNOUNCE-Tag-libreoffice-4-1-2-3-on-branch-libreoffice-4-1-2-created-td4075544.html

"...The tag libreoffice-4.1.2.3 (AKA 4.1.2 RC3) has been created. This is
an initially unscheduled RC because of regressions in RC2 that the
QA-Team identified..."
Comment 17 Markus Mohrhard 2013-09-29 05:58:07 UTC
*** Bug 69720 has been marked as a duplicate of this bug. ***
Comment 18 Michael Meeks 2013-09-30 11:23:54 UTC
Hi guys - just a quick bootnote now the conference is ended - *thank-you* so much for testing our pre-release builds.

It is wonderful to have this sort of feedback before we go live with such a horrible gotcha :-) very much appreciated (and thanks Markus for catching the pattern & cause so fast - during the conference).
Comment 19 Commit Notification 2013-09-30 11:31:05 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7c7e80fb41e476d2858f7003f294d8688f242a31&h=libreoffice-4-0

fdo#69450 - IDF_ATTRIB & IDF_CONTENTS must be disjoint.


It will be available in LibreOffice 4.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 ign_christian 2013-10-11 09:42:07 UTC
*** Bug 70061 has been marked as a duplicate of this bug. ***
Comment 21 Michael Stahl 2014-02-05 11:39:12 UTC
*** Bug 69841 has been marked as a duplicate of this bug. ***