fdo#69450 - IDF_ATTRIB & IDF_CONTENTS must be disjoint.

Change-Id: Ib971824a7f274334012b872acec65310535ad767